fixed a wrong width

--- a/client/src/components/card-style.css
+++ b/client/src/components/card-style.css
@@ -37,14 +37,13 @@
 }
 
 img {
-  width: 100%;
-  max-width: 700px;
-  max-height: 700px;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
-@media all and (max-width: 400px) {
+@media all and (max-width: 500px) {
   .card {
     max-width: 90vw;
-    max-height: 60vh;
+    max-height: 70vh;
   }
 }
